tests/cases/compiler/shorthandPropertyUndefined/index.ts
// From `github.com/microsoft/TypeScript/blob/v5.7.3/tests/cases/compiler/shorthandPropertyUndefined.ts`, Apache-2.0 License

var a = { b };
//~^ ERROR: Cannot find name 'b'.